# advent-of-code

./: .gitignore  Main.hs  advent-of-code.cabal  shell.nix
2019/1/: Main.hs
2019/10/: Main.hs
2019/11/: Main.hs
2019/12/: Main.hs
2019/13/: Main.hs
2019/14/: Main.hs
2019/15/: Main.hs
2019/16/: Main.hs
2019/17/: Main.hs
2019/18/: Main.hs
2019/19/: Main.hs
2019/2/: Main.hs
2019/20/: Main.hs
2019/21/: Main.hs
2019/22/: Main.hs
2019/23/: Main.hs
2019/3/: Main.hs
2019/4/: Main.hs
2019/5/: Main.hs
2019/6/: Main.hs
2019/7/: Main.hs
2019/8/: Main.hs
2019/9/: Main.hs
AOC2021/: Common.hs
AOC2021/Day1/: Main.hs
AOC2021/Day10/: Main.hs
AOC2021/Day11/: Main.hs
AOC2021/Day12/: Main.hs
AOC2021/Day13/: Main.hs
AOC2021/Day14/: Main.hs
AOC2021/Day15/: Main.hs
AOC2021/Day16/: Main.hs
AOC2021/Day17/: Main.hs
AOC2021/Day18/: Main.hs
AOC2021/Day19/: Main.hs
AOC2021/Day2/: Main.hs
AOC2021/Day20/: Main.hs
AOC2021/Day21/: Main.hs
AOC2021/Day22/: Main.hs
AOC2021/Day23/: Main.hs
AOC2021/Day24/: Main.hs
AOC2021/Day25/: Main.hs
AOC2021/Day3/: Main.hs
AOC2021/Day4/: Main.hs
AOC2021/Day5/: Main.hs
AOC2021/Day6/: Main.hs
AOC2021/Day7/: Main.hs
AOC2021/Day8/: Main.hs
AOC2021/Day9/: Main.hs
