cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

library
    build-depends: base               ^>=4.17.0.0,
                   array              >= 0.5.4 && < 0.6,
                   megaparsec         >= 9.3.0 && < 9.4,
                   mtl                >= 2.2.2 && < 2.3,
                   transformers       >= 0.5.6 && < 0.6,
    default-language: Haskell2010
